test/types/type_variables/deitz/part7/construct-1b.good
Error: Unresolved call 'R(t=float, x=:string)' (construct-1b.chpl:6)
Candidates are:
  R(type t, x: t) (construct-1b.chpl:1)
