test/types/type_variables/deitz/part7/construct-1b.chpl
record R {
  type t;
  var x : t;
}

var r : R(t = float, x = "deitz was here");

writeln(r);
